Modification par rapport à l'image de l'actualité. L'utilisateur indiquera le type de jeu pour l'événement et non le jeu. L'utilisateur pourra uploader sa propre image ou prendre une image de la liste des jeu en base de donnée sinon l'image par défaut sera celle du type de jeu. (c'est en chantier)
Mise à jour de la table event (ajout de la colonne image_event et remplacement : id_jeu devenu id_type_jeu)

--- a/css/complement.css
+++ b/css/complement.css
@@ -452,6 +452,10 @@ div.ui-datepicker{
 {
     text-align:center;
 }
+.actualite
+{
+	margin:15px 0;
+}
 .update_event
 {
     font-size:10px;
@@ -462,13 +466,12 @@ div.ui-datepicker{
 .date_event
 {
     margin-left:2%;
-    font-style: italic;
     font-size:13px;
     display:inline-block;
 }
 .limite
 {
-    border-right:1px solid #E5E5E5;
+    border-left:1px solid #E5E5E5;
 }
 
 /*empecher ecrire dans input*/
